api, spa and tests

--- a/Grosvenor.Portal.Data/Migrations/.env.local
+++ b/Grosvenor.Portal.Data/Migrations/.env.local
@@ -1,1 +1,1 @@
-$CONNSTR$=server=EUAZBISQLTEST02;database=PortalDatabase;Integrated Security=True;
+CONNSTR=server=EUAZBISQLDEV02;database=CompanyFlats;Integrated Security=True;
