--- a/Grosvenor.Portal.Web/appsettings.json
+++ b/Grosvenor.Portal.Web/appsettings.json
@@ -7,13 +7,23 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "server=EUAZBISQLTEST02;database=PortalDatabase;Integrated Security=True;trustservercertificate=true;encrypt=true;"
+    "DefaultConnection": "server=EUAZBISQLDEV02;database=CompanyFlats;Integrated Security=True;trustservercertificate=true;encrypt=true;"
   },
   "AzureAd": {
-    "Instance": "https://login.microsoftonline.com",
-    "TenantId": "1c54f492-d9a7-4907-8e7a-7e46861c750d",
-    "ClientId": "dd2e19e9-a774-4849-8d98-a4c8c467ba0a",
-    "ClientSecret": "odI8Q~12eJ4r73MQjTcwPlCCW8K.jpQtxlElOcUR",
-    "DomainHint": "grosvenor.com"
+    "TenantId": "9a79577e-1acb-4ec3-90be-b7b901c6a253",
+    "ClientId": "7bd45e85-4483-45b0-bcee-724514bf2bb7",
+    "DomainHint": "grosvenor.com",
+    "AdminGroupId": "d1f67fb4-f2a6-455e-ad7e-99d3694fec94"
+  },
+  "EmailConfig": {
+    "Host": "Ukloncas.intl.grosvenor.com",
+    "Username": "",
+    "Password": "",
+    "Port": 25,
+    "Enabled": true,
+    "FromEmail": "Muhammad.Kamran@grosvenor.com",
+    "FromName": "Company Flats",
+    "ToEmailMask": "Muhammad.Kamran@grosvenor.com",
+    "SubjectPrefix": "[LOCAL]: "
   }
 }
