--- a/Grosvenor.Portal.Business/Grosvenor.Portal.Business.csproj
+++ b/Grosvenor.Portal.Business/Grosvenor.Portal.Business.csproj
@@ -7,6 +7,10 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="MailKit" Version="3.6.0" />
+	</ItemGroup>
+	
+	<ItemGroup>
 	  <ProjectReference Include="..\Grosvenor.Portal.Data\Grosvenor.Portal.Data.csproj" />
 	</ItemGroup>
 
