--- a/Grosvenor.Portal.Web/ClientApp/package.json
+++ b/Grosvenor.Portal.Web/ClientApp/package.json
@@ -3,28 +3,34 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
+    "prestart": "dotnet dev-certs https --export-path ./ssl.pem --format pem --no-password --trust",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --configuration production",
     "watch": "ng build --watch --configuration development"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^15.0.0",
-    "@angular/common": "^15.0.0",
-    "@angular/compiler": "^15.0.0",
-    "@angular/core": "^15.0.0",
-    "@angular/forms": "^15.0.0",
-    "@angular/platform-browser": "^15.0.0",
-    "@angular/platform-browser-dynamic": "^15.0.0",
-    "@angular/router": "^15.0.0",
+    "@angular/animations": "^14.3.0",
+    "@angular/common": "^14.3.0",
+    "@angular/compiler": "^14.3.0",
+    "@angular/core": "^14.3.0",
+    "@angular/forms": "^14.3.0",
+    "@angular/platform-browser": "^14.3.0",
+    "@angular/platform-browser-dynamic": "^14.3.0",
+    "@angular/router": "^14.3.0",
+    "@ngx-loading-bar/core": "^6.0.2",
+    "@ngx-loading-bar/http-client": "^6.0.2",
+    "ag-grid-angular": "^28.1.1",
+    "ag-grid-community": "^28.1.1",
+    "ng-zorro-antd": "^14.3.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.12.0"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^15.0.0",
-    "@angular/cli": "~15.0.0",
-    "@angular/compiler-cli": "^15.0.0",
-    "typescript": "~4.8.2"
+    "@angular-devkit/build-angular": "^14.2.11",
+    "@angular/cli": "~14.2.11",
+    "@angular/compiler-cli": "^14.3.0",
+    "typescript": "~4.7.4"
   }
 }
