--- a/Grosvenor.Portal.Web/Grosvenor.Portal.Web.csproj
+++ b/Grosvenor.Portal.Web/Grosvenor.Portal.Web.csproj
@@ -14,7 +14,7 @@
 		<PackageReference Include="Azure.Extensions.AspNetCore.Configuration.Secrets" Version="1.2.2" />
 		<PackageReference Include="Azure.Identity" Version="1.8.2" />
 		<PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.21.0" />
-		<PackageReference Include="Microsoft.Identity.Web" Version="1.25.5" />
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="6.0.15" />
 	</ItemGroup>
 
 	<ItemGroup>
