--- a/Grosvenor.Portal.Web/Grosvenor.Portal.Web.csproj
+++ b/Grosvenor.Portal.Web/Grosvenor.Portal.Web.csproj
@@ -15,6 +15,7 @@
 		<PackageReference Include="Azure.Identity" Version="1.8.2" />
 		<PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.21.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="6.0.15" />
+		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.1" />
 	</ItemGroup>
 
 	<ItemGroup>
